@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               sapnwrfc
-version:            0.31
+version:            0.32
 abstract:           sapnwrfc - SAP Netweaver RFC support for Perl
 author:
     - Piers Harding <piers@cpan.org>
 license:            unknown
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Test::More:  0
@@ -15,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
