@@ -2,7 +2,7 @@
                sapnwrfc - SAP Netweaver RFC support for Perl
 
 
-    Copyright (c) 2006 - 2009 Piers Harding.
+    Copyright (c) 2006 - 2010 Piers Harding.
     All rights reserved.
     This program is free software; you can redistribute it and/or modify
     it under the terms of either:
