@@ -1,7 +1,7 @@
 package SAPNW::Rfc;
 =pod
 
-    Copyright (c) 2006 - 2009 Piers Harding.
+    Copyright (c) 2006 - 2010 Piers Harding.
     All rights reserved.
 
 =cut
@@ -14,7 +14,7 @@ use Data::Dumper;
 require 5.008;
 
 use vars qw(@ISA $VERSION $SAPNW_RFC_CONFIG);
-$VERSION = '0.31';
+$VERSION = '0.32';
 @ISA = qw(SAPNW::Base);
 
 use YAML;
