@@ -120,7 +120,7 @@ https://www.sdn.sap.com/irj/scn/weblogs?blog=/pub/wlg/1452 for help.
 B<Connecting via saprouter>
 
 To connect via saprouter, this is achieved in by constructing the appropriate
-routing string, and using this in place of the L<ashost> parameter eg:
+routing string, and using this in place of the ashost parameter eg:
 
   ashost: /H/my.saprouter.net/H/gecko.local.net/
 
@@ -400,7 +400,7 @@ Piers Harding E<lt>piers@cpan.orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (c) 2006 - 2009 Piers Harding.
+Copyright (c) 2006 - 2010 Piers Harding.
 All rights reserved.
 
 L<http://www.piersharding.com>
